kubernetes/arr/bazarr/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bazarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
      - image: lscr.io/linuxserver/bazarr:latest
        name: bazarr
        resources:
          limits:
            cpu: "50m"
            memory: "110M"
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  6767
          name:  http
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: config
      volumes:
        - name: media
          nfs:
            path: /tank/media
            server: "192.168.1.42"
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
