kubernetes/arr/bazarr/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 6767
    targetPort: 6767
