kubernetes/arr/bazarr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bazarr.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-chain@kubernetescrd,traefik-bazarroidc@kubernetescrd
spec:
  tls:
  - hosts:
    - bazarr.slfhst.io
    secretName: bazarr-cert-prod
  rules:
  - host: bazarr.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              name: http
